fix overflow of body in collapsible sidebar

--- a/cdap-ui/app/cdap/components/CollapsibleSidebar/CollapsibleSidebar.scss
+++ b/cdap-ui/app/cdap/components/CollapsibleSidebar/CollapsibleSidebar.scss
@@ -62,7 +62,11 @@ $collapsible-width: 390px;
       width: $collapsible-width;
       box-shadow: 0px 4px 21px 2px rgba(0, 0, 0, 0.4);
 
-      .collapsible-body { display: block; }
+      .collapsible-body {
+        display: block;
+        overflow-y: auto;
+        height: 100%;
+      }
     }
 
     .collapsible-body { display: none; }
